# timespec

./: .travis.yml  Makefile.am  README.md  configure.ac  package.json  timespec.pc.in
doc/: README.md
src/: timespec.c  timespec.h
test/: get.c  null.c  testing.h
